Fix for Thumbnail Jank 3
Third time's a charm. "Fix for Thumbnail Jank 2" fixed the issue of `.portfolio-item .meta` falling behind `.portfolio-item .media`, but inadvertently introduced a new cosmetic issue, where an external link (if present) did not align to the bottom of the `.portfolio-item`. This code accounts for that.

--- a/wp-content/themes/benmiles-wp/assets/css/custom.css
+++ b/wp-content/themes/benmiles-wp/assets/css/custom.css
@@ -1134,6 +1134,7 @@ textarea.form-control {
     flex-direction: column;
     align-items: center;
 	padding: 20px;
+	flex-grow: 1;
 }
 .portfolio-item .title { 
 	font-size: 18px;
